Fix White space in the right

--- a/css/about.css
+++ b/css/about.css
@@ -526,7 +526,6 @@
         gap: 20px;
         text-align: center;
         position: relative;
-        right: -18px;
         flex-flow: row wrap;
     }
 
